clusters/dextek/apps/network/envoy-gateway/config/external/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-external
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname ingress.plexuz.xyz
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      coredns.io/hostname: gateway-external
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.25.51
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: external-envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: default-tls
